# ur5e_ai_agent

./: README.md  additional_instructions.txt
custom_msgs/: CMakeLists.txt  package.xml
ur5e_agent/: CMakeLists.txt  package.xml
ur5e_agent/launch/: services.launch.py
ur5e_agent/scripts/: cartesian_motion_server.py  controller_switcher.py  llm_config.py  prompts.py  ur5e_rosa_agent.py
ur5e_agent/scripts/tools/: ur5e_control.py
