<?xml version="1.0"?>
<package format="3">
  <name>custom_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages and services for UR5e AI agent</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Other dependencies your services depend on -->
  <depend>geometry_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


