<?xml version="1.0"?>
<package format="3">
  <name>ur5e_agent</name>
  <version>0.0.0</version>
  <description>UR5e AI Agent for natural language robot control</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>controller_manager_msgs</depend>
  <depend>custom_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
